<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jger.MentalCounting.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/constraintLayout"
        app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
        app:layout_constraintStart_toStartOf="@id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@id/constraintLayout">

        <Button
            android:id="@+id/bouton_calculer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_calculer" />

        <Button
            android:id="@+id/bouton_statistique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_statistique" />
        <Button
            android:id="@+id/bouton_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_credit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>